name:                 Pylon
version:              0.1.0.0
synopsis:             Bytecode backend for typed functional programming languages.
homepage:             zrho.github.io/pylon
license:              BSD3
license-file:         LICENSE
author:               Lukas Heidemann
maintainer:           lukasheidemann@gmail.com
copyright:            Copyright 2014 by Lukas Heidemann
category:             Language
build-type:           Simple
cabal-version:        >=1.10

library
  exposed-modules:    Language.Pylon.Core.AST,
                      Language.Pylon.Core.STG,
                      Language.Pylon.Core.Util,
                      Language.Pylon.Core.Check,
                      Language.Pylon.Core.Unify,
                      Language.Pylon.Core.CaseTree,
                      Language.Pylon.Core.Monad,
                      Language.Pylon.STG.AST,
                      Language.Pylon.Codegen.JS,
                      Language.Pylon.Codegen.Monad
  other-modules:      Language.Pylon.Util.Name,
                      Language.Pylon.Util.Error,
                      Language.Pylon.Util.Subst
                      Language.Pylon.Util
  other-extensions:   OverloadedStrings,
                      FlexibleInstances,
                      TypeFamilies,
                      GADTs,
                      GeneralizedNewtypeDeriving,
                      MultiParamTypeClasses,
                      FlexibleContexts,
                      TupleSections,
                      QuasiQuotes,
                      FunctionalDependencies,
                      PatternSynonyms
  build-depends:      base,
                      mtl >= 2.2,
                      containers,
                      trifecta,
                      parsers,
                      transformers,
                      interpolatedstring-perl6,
                      unordered-containers,
                      uniplate,
                      pretty-show,
                      concurrent-supply
  hs-source-dirs:     src
  default-language:   Haskell2010
  ghc-options:        -Wall